4.5 -> 5.0:
    - jbj: add %{?dir/file} as shorthand for %{?dir:%{dir}/file}.
    - jbj: fix a --import memory leak.
    - rse: unbreak big-endian handling in memory and cryptography functions by Autoconf providing WORDS_BIGENDIAN and fixing usage
    - rse: cleanup and fix the code to compile under *non*-GCC compilers (e.g. Sun Studio and Intel C/C++)
    - rse: fix building under --with-dmalloc with DMalloc 5.5.2 where "x{malloc,calloc,realloc,free}" are also overridden
    - rse: provide convenience --enable-build-debug Autoconf option for building RPM with debugging instrumentation
    - rse: fix memory leak and segfault in lib/psm.c related to dirname(3) usage
    - rse: fix distribution tarball by including the python/ subdir content as Autoconf unconditionally operates on it
    - jbj: improved brp-nobuildrootpath script (vallimar).
    - jbj: consistent usage is the start of determining the best fix.
    - rse: use %{_rpmdir}/repackage as the default for %{_repackage_dir} instead of a hard-coded /var/spool/repackage
    - rse: remove one more hard-coded reference to /etc/rpm/sysinfo with a macro and SYSCONFIGDIR based approach
    - rse: add (partially untested) platform support for AIX, IRIX and Tru64 based on OpenPKG patchset.
    - rse: provide an RPM_OS_XXX define for allowing us to compiler independent check for a platform in the C code
    - rse: move remaining _D_EXACT_NAMLEN fiddling from public rpmio/fts.h to private rpmio/fts.c
    - rse: allow building without POSIX pthreads (explicitly through --without-pthreads or if platform doesn't support it)
    - rse: provide "install-sh" script in %{_rpmhome} as a companion to "mkinstalldirs"
    - rse: fix %{__mkdir_p} macro fallback value by installing missing "mkinstalldirs" into %{_rpmhome}
    - rse: consistently use %{__mkdir_p} macro instead of its pre-defined value @MKDIR_P@ to allow overriding
    - mgh: Update configure.ac to use target instead of host values for configuration