@@ -132,6 +132,8 @@ int print_expand_trace = _PRINT_EXPAND_TRACE;
 
 #define	MACRO_CHUNK_SIZE	16
 
+static size_t _macro_BUFSIZ = 16 * BUFSIZ;
+
 /* forward ref */
 static int expandMacro(MacroBuf mb)
 	/*@globals rpmGlobalMacroContext,
@@ -602,18 +604,19 @@ doShellEscape(MacroBuf mb, const char * cmd, size_t clen)
 	/*@globals rpmGlobalMacroContext, h_errno, fileSystem @*/
 	/*@modifies mb, rpmGlobalMacroContext, fileSystem @*/
 {
-    char pcmd[BUFSIZ];
+    size_t bufn = _macro_BUFSIZ;
+    char * buf = alloca(bufn);
     FILE *shf;
     int rc;
     int c;
 
-    strncpy(pcmd, cmd, clen);
-    pcmd[clen] = '\0';
-    rc = expandU(mb, pcmd, sizeof(pcmd));
+    strncpy(buf, cmd, clen);
+    buf[clen] = '\0';
+    rc = expandU(mb, buf, bufn);
     if (rc)
 	return rc;
 
-    if ((shf = popen(pcmd, "r")) == NULL)
+    if ((shf = popen(buf, "r")) == NULL)
 	return 1;
     while(mb->nb > 0 && (c = fgetc(shf)) != EOF)
 	SAVECHAR(mb, c);
@@ -642,7 +645,9 @@ doDefine(MacroBuf mb, /*@returned@*/ const char * se, int level, int expandbody)
 	/*@modifies mb, rpmGlobalMacroContext @*/
 {
     const char *s = se;
-    char buf[BUFSIZ], *n = buf, *ne;
+    size_t bufn = _macro_BUFSIZ;
+    char *buf = alloca(bufn);
+    char *n = buf, *ne;
     char *o = NULL, *oe;
     char *b, *be;
     int c;
@@ -752,7 +757,7 @@ doDefine(MacroBuf mb, /*@returned@*/ const char * se, int level, int expandbody)
     }
 
 /*@-modfilesys@*/
-    if (expandbody && expandU(mb, b, (&buf[sizeof(buf)] - b))) {
+    if (expandbody && expandU(mb, b, (&buf[bufn] - b))) {
 	rpmError(RPMERR_BADSPEC, _("Macro %%%s failed to expand\n"), n);
 	return se;
     }
@@ -779,7 +784,8 @@ doUndefine(MacroContext mc, /*@returned@*/ const char * se)
 	/*@modifies mc, rpmGlobalMacroContext @*/
 {
     const char *s = se;
-    char buf[BUFSIZ], *n = buf, *ne = n;
+    char *buf = alloca(_macro_BUFSIZ);
+    char *n = buf, *ne = n;
     int c;
 
     COPYNAME(ne, s, c);
@@ -946,7 +952,9 @@ grabArgs(MacroBuf mb, const MacroEntry me, /*@returned@*/ const char * se,
 	/*@globals rpmGlobalMacroContext @*/
 	/*@modifies mb, rpmGlobalMacroContext @*/
 {
-    char buf[BUFSIZ], *b, *be;
+    size_t bufn = _macro_BUFSIZ;
+    char *buf = alloca(bufn);
+    char *b, *be;
     char aname[16];
     const char *opts, *o;
     int argc = 0;
@@ -996,7 +1004,7 @@ grabArgs(MacroBuf mb, const MacroEntry me, /*@returned@*/ const char * se,
 
 #ifdef NOTYET
     /* XXX if macros can be passed as args ... */
-    expandU(mb, buf, sizeof(buf));
+    expandU(mb, buf, bufn);
 #endif
 
     /* Build argv array */
@@ -1099,11 +1107,12 @@ doOutput(MacroBuf mb, int waserror, const char * msg, size_t msglen)
 	/*@globals rpmGlobalMacroContext, h_errno, fileSystem @*/
 	/*@modifies mb, rpmGlobalMacroContext, fileSystem @*/
 {
-    char buf[BUFSIZ];
+    size_t bufn = _macro_BUFSIZ + msglen;
+    char *buf = alloca(bufn);
 
     strncpy(buf, msg, msglen);
     buf[msglen] = '\0';
-    (void) expandU(mb, buf, sizeof(buf));
+    (void) expandU(mb, buf, bufn);
     if (waserror)
 	rpmError(RPMERR_BADSPEC, "%s\n", buf);
     else
@@ -1125,17 +1134,21 @@ doFoo(MacroBuf mb, int negate, const char * f, size_t fn,
 	/*@globals rpmGlobalMacroContext, h_errno, fileSystem, internalState @*/
 	/*@modifies mb, rpmGlobalMacroContext, fileSystem, internalState @*/
 {
-    char buf[BUFSIZ], *b = NULL, *be;
+    size_t bufn = _macro_BUFSIZ + fn + gn;
+    char * buf = alloca(bufn);
+    char *b = NULL, *be;
     int c;
 
     buf[0] = '\0';
     if (g != NULL) {
 	strncpy(buf, g, gn);
 	buf[gn] = '\0';
-	(void) expandU(mb, buf, sizeof(buf));
+	(void) expandU(mb, buf, bufn);
     }
     if (fn > 5 && STREQ("patch", f, 5) && xisdigit(f[5])) {
-	for ( c = 5 ; c < fn-1 && f[c] == '0' && xisdigit(f[c+1]) ; c++ ) ; /* Skip leading zeros */
+	/* Skip leading zeros */
+	for (c = 5; c < fn-1 && f[c] == '0' && xisdigit(f[c+1]);)
+		c++;
 	b = buf;
 	be = stpncpy( stpcpy(b, "%patch -P "), f+c, fn-c);
 	*be = '\0';
@@ -1144,13 +1157,10 @@ doFoo(MacroBuf mb, int negate, const char * f, size_t fn,
 	    b = buf;
 	else
 	    b++;
-#if NOTYET
-    /* XXX watchout for conflict with %dir */
     } else if (STREQ("dirname", f, fn)) {
 	if ((b = strrchr(buf, '/')) != NULL)
 	    *b = '\0';
 	b = buf;
-#endif
     } else if (STREQ("suffix", f, fn)) {
 	if ((b = strrchr(buf, '.')) != NULL)
 	    b++;
@@ -1493,6 +1503,7 @@ expandMacro(MacroBuf mb)
 
 	/* XXX necessary but clunky */
 	if (STREQ("basename", f, fn) ||
+	    STREQ("dirname", f, fn) ||
 	    STREQ("suffix", f, fn) ||
 	    STREQ("expand", f, fn) ||
 	    STREQ("verbose", f, fn) ||
@@ -2015,7 +2026,8 @@ int
 rpmLoadMacroFile(MacroContext mc, const char * fn)
 {
     FD_t fd = Fopen(fn, "r.fpio");
-    char buf[BUFSIZ];
+    size_t bufn = _macro_BUFSIZ;
+    char *buf = alloca(bufn);
     int rc = -1;
 
     if (fd == NULL || Ferror(fd)) {
@@ -2025,11 +2037,11 @@ rpmLoadMacroFile(MacroContext mc, const char * fn)
 
     /* XXX Assume new fangled macro expansion */
     /*@-mods@*/
-    max_macro_depth = 16;
+    max_macro_depth = _MAX_MACRO_DEPTH;
     /*@=mods@*/
 
     buf[0] = '\0';
-    while(rdcl(buf, sizeof(buf), fd) != NULL) {
+    while(rdcl(buf, bufn, fd) != NULL) {
 	char c, *n;
 
 	n = buf;
@@ -2209,14 +2221,14 @@ rpmExpand(const char *arg, ...)
     const char *s;
     char *t, *te;
     size_t sn, tn;
-    size_t un = 16 * BUFSIZ;
+    size_t bufn = _macro_BUFSIZ + strlen(arg) + 1;
 
     va_list ap;
 
     if (arg == NULL)
 	return xstrdup("");
 
-    t = xmalloc(strlen(arg) + un + 1);
+    t = xmalloc(bufn);
     *t = '\0';
     te = stpcpy(t, arg);
 
@@ -2225,7 +2237,7 @@ rpmExpand(const char *arg, ...)
     while ((s = va_arg(ap, const char *)) != NULL) {
 	sn = strlen(s);
 	tn = (te - t);
-	t = xrealloc(t, tn + sn + un + 1);
+	t = xrealloc(t, tn + sn + bufn + 1);
 	te = t + tn;
 	te = stpcpy(te, s);
     }
@@ -2234,8 +2246,8 @@ rpmExpand(const char *arg, ...)
 
     *te = '\0';
     tn = (te - t);
-    (void) expandMacros(NULL, NULL, t, tn + un + 1);
-    t[tn + un] = '\0';
+    (void) expandMacros(NULL, NULL, t, tn + bufn + 1);
+    t[tn + bufn] = '\0';
     t = xrealloc(t, strlen(t) + 1);
     
     return t;
@@ -2363,7 +2375,8 @@ char *rpmCleanPath(char * path)
 const char *
 rpmGetPath(const char *path, ...)
 {
-    char buf[BUFSIZ];
+    size_t bufn = _macro_BUFSIZ;
+    char *buf = alloca(bufn);
     const char * s;
     char * t, * te;
     va_list ap;
@@ -2383,7 +2396,7 @@ rpmGetPath(const char *path, ...)
     }
     va_end(ap);
 /*@-modfilesys@*/
-    (void) expandMacros(NULL, NULL, buf, sizeof(buf));
+    (void) expandMacros(NULL, NULL, buf, bufn);
 /*@=modfilesys@*/
 
     (void) rpmCleanPath(buf);
@@ -2513,25 +2526,26 @@ const char *testfile = "./test";
 int
 main(int argc, char *argv[])
 {
-    char buf[BUFSIZ];
+    size_t bufn = _macro_BUFSIZ;
+    char *buf = alloca(bufn);
     FILE *fp;
     int x;
 
     rpmInitMacros(NULL, rpmMacrofiles);
 
     if ((fp = fopen(testfile, "r")) != NULL) {
-	while(rdcl(buf, sizeof(buf), fp)) {
-	    x = expandMacros(NULL, NULL, buf, sizeof(buf));
+	while(rdcl(buf, bufn, fp)) {
+	    x = expandMacros(NULL, NULL, buf, bufn);
 	    fprintf(stderr, "%d->%s\n", x, buf);
-	    memset(buf, 0, sizeof(buf));
+	    memset(buf, 0, bufn);
 	}
 	fclose(fp);
     }
 
-    while(rdcl(buf, sizeof(buf), stdin)) {
-	x = expandMacros(NULL, NULL, buf, sizeof(buf));
+    while(rdcl(buf, bufn, stdin)) {
+	x = expandMacros(NULL, NULL, buf, bufn);
 	fprintf(stderr, "%d->%s\n <-\n", x, buf);
-	memset(buf, 0, sizeof(buf));
+	memset(buf, 0, bufn);
     }
     rpmFreeMacros(NULL);
 
