@@ -1,4 +1,6 @@
 4.5 -> 5.0:
+    - jbj: use _macro_BUFSIZ, not compiled in BUFSIZ, to size expansion targets.
+    - jbj: enable %{dirname:...} macro primitive.
     - jbj: add %{?dir/file} as shorthand for %{?dir:%{dir}/file}.
     - jbj: fix a --import memory leak.
     - rse: unbreak big-endian handling in memory and cryptography functions by Autoconf providing WORDS_BIGENDIAN and fixing usage
